# siac-chat

back/: Cargo.toml  docker-compose.yaml
back/migrations/: 20240830165049_user.sql
back/src/: main.rs
back/src/handlers/: checker.rs  user.rs
back/src/lib/: jwt.rs
back/src/middlewares/: auth.rs
back/src/models/: chat.rs  message.rs  user.rs
front/: .editorconfig  bun.lockb  components.json  package.json  svelte.config.js
front/src/: app.css  hooks.server.ts
front/src/features/auth/components/: content-dialog-auth.svelte  index.ts  login-form.svelte  register-form.svelte
front/src/features/auth/helpers/: index.ts  refresh-token-sesion.ts
front/src/features/auth/types/: authjs.d.ts
front/src/features/chat/components/: card-chat.svelte  card-user-chat.svelte  chat.svelte  index.ts
front/src/features/user/components/: content-dialog-profile.svelte  index.ts
front/src/routes/: +error.svelte  +layout.svelte  +page.svelte
front/src/routes/private-chats/: +layout.server.ts
front/src/routes/private-chats/[id]/: +page.svelte  +page.ts
front/src/shared/components/: index.ts  nav-link.svelte  profile-button.svelte  settings-button.svelte  sidebar.svelte
front/src/shared/icons/: index.ts  logo-icon.svelte
front/src/shared/lib/: auth.ts  fetch.ts
front/src/shared/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
front/src/shared/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  (+3 more)
(+70 files in other folders)
