[package]
name = "real_time_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.9.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-async-std-native-tls",
    "chrono",
    "uuid",
] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }